--- a/_posts/2017-07-29-py-OOP4.markdown
+++ b/_posts/2017-07-29-py-OOP4.markdown
@@ -471,3 +471,7 @@ class Enfant2(Parent):
 ```
 
 C'est exactement la même chose mis à part qu'à la place de copier coller le code, on l'appelle directement.
+
+# Suite
+
+* [partie 5](/py/py-OOP5.html)
