--- a/_posts/2017-07-29-py-OOP5.markdown
+++ b/_posts/2017-07-29-py-OOP5.markdown
@@ -65,7 +65,7 @@ armure bouclier: 100
 bouclier.defend(214), degats restants: 114
 ```
 
-Les deux classes parentes ont une méthode `__init__` mais **Python ne peut en "copier" qu'une seule** dans l'enfant. Il copie donc la première qu'il trouve. Il va prendre la liste des parents (ici: Arme, Protection) et la lire de gauche à droite. Il va regarder chaque parent, et si la méthode existe, il va la "copier" dans l'enfant. Si il retrouve une méthode de même nom dans un des parents suivant, il l'ignore.
+Les deux classes parentes ont une méthode `__init__` mais **Python ne peut en "copier" qu'une seule** dans l'enfant. Il copie donc la première qu'il trouve. Il va prendre la liste des parents (class C**(A, B)**:) et la lire de gauche à droite. Il va regarder chaque parent, et si la méthode `__init__` existe la **"**copier**"** dans l'enfant. Si il retrouve une méthode de même nom dans un des parents suivant, **il l'ignore**.
 
 Dans notre exemple, si on fait:
 
@@ -74,20 +74,34 @@ class ProtectionOffensive(Arme, Protection):
     pass
 ```
 
-`ProtectionOffensive` n'aura que la méthode `__init__` de `Arme`. Or ce n'est pas ce qu'on veut. On va donc override la méthode `__init__`, et dedans appeler la méthode `__init__` de `Arme` **et** celle de `Protection`.
+`ProtectionOffensive` n'aura que la méthode `__init__` de `Arme` **et ce n'est pas ce qu'on veut**. On va donc override la méthode `__init__` de `ProtectionOffensive`, et dedans appeler la méthode `__init__` de `Arme` **et** de `Protection`.
 
-Cette syntaxe: `Classe.methode(self, args...)` que l'on retrouve dans `Arme.__init__(self, nom, degat)` est juste un moyen d'appeler spécifiquement la méthode du parent.
+Cette syntaxe: `Classe.methode(self, args...)` que l'on retrouve dans `Arme.__init__(self, nom, degat)` est juste un moyen d'**appeler spécifiquement la méthode du parent**.
 
-Dans la partie précédente nous avons vu qu'on pouvait faire cela avec `super()`. Mais `super()` nous retournera la première méthode du premier parent qu'elle trouve: c'est le but de `super()`, de faire ça automatiquement sans se soucier de savoir qui est le premier parent à avoir une méthode du bon nom.
+Dans la partie précédente nous avons vu qu'on pouvait faire cela avec `super()`. Mais `super()` **nous retournera la première méthode du premier parent qu'elle trouve**. C'est le but de `super()`, de faire ça automatiquement sans se soucier de savoir qui est le premier parent à avoir une méthode du bon nom.
+
+rappel syntaxe `super()`:
+
+```python
+class Enfant(Parent):
+    def calcule_complique(self, liste, ristourne):
+        prix = super(Enfant, self).calcule_complique(liste)
+        return prix - (prix * ristourne / 100)
+```
 
 C'est utile car parfois c'est le parent du parent du parent qui a la méthode qu'on veut appeler, on ne connaît pas forcément son nom, ou alors on ne veut pas l'hard coder. Dans notre cas, on veut spécifiquement une méthode d'un parent en particulier, il faut donc l'écrire à la main.
 
 De façon générale:
 
 * On utilise `super()` quand on fait de l'héritage simple où qu'on veut juste appeler la méthode du premier parent venu sans se soucier de son nom (car il peut être très haut dans la chaîne d'héritage).
-* On utilise `Classe.methode(self, args...) quand on veut spécifiquement appeler la méthode d'un parent en particulier.
+* On utilise `Classe.methode(self, args...)` quand on veut spécifiquement appeler la méthode d'un parent en particulier.
 
 <span style="color:red"> **ATTENTION** </span> 
 
-Le `self` n'est pas au même endroit dans `super(ClasseCourante, self).methode(args...)` et `ClasseParente.methode(self, args...)`. Dans le premier cas, on passe la classe courante (que `super()` va analyser pour trouver les parents automatiquement) et dans le second, on hard code le nom de la classe parente.
+Le `self` n'est pas au même endroit dans les cas suivants:
+
+* `super(ClasseCourante, self).methode(args...)` $$ \Rightarrow $$ On passe la classe courante (que `super()` va analyser pour trouver les parents automatiquement)
+* `ClasseParente.methode(self, args...)` $$ \Rightarrow $$ On hard code le nom de la classe parente.
+
+
 
