--- a/_posts/2017-07-25-py-divers.markdown
+++ b/_posts/2017-07-25-py-divers.markdown
@@ -12,7 +12,7 @@ finished: false
 ## Divers
 
 * Toute valeur en Python est un objet
-* En Python toutes les variables sont des références
+* En Python toutes les variables sont des références vers des objets
 * Il n'y a pas de **vrai** constantes en Python! </span> On parle de constante quand une variable est écrite toute en majuscules (**convention**) et qu'elle est sensé ne jamais changer.
 
 ## Duck typing
