--- a/_posts/2017-07-29-py-OOP3.markdown
+++ b/_posts/2017-07-29-py-OOP3.markdown
@@ -45,6 +45,8 @@ Il semble que Python aie un comportement différent pour les attributs de classe
 
 Les attributs de classe **mutables** sont l'équivalent les **variables statiques** en C++. Une modification d'un attribut de classe dans une instance ou directement de la classe modifie l'attribut de tous les objets de la classe et de la classe elle-même:
 
+> L’attribut de classe est aussi conservé lors de l’héritage, et partagé avec les classes filles (sauf lorsque les classes filles redéfinissent l’attribut, de la même manière que pour les instances).
+
 ```python
 class Cl(object):
     l = []
