--- a/_posts/2017-07-29-py-OOP3.markdown
+++ b/_posts/2017-07-29-py-OOP3.markdown
@@ -39,7 +39,7 @@ valeur
 <span style="color:red"> **En attendant une meilleur explication:** </span> 
 
 
-Il semble que Python aie un comportement différent pour les attributs de classe mutables et non-mutables.
+Il semble que Python a un comportement différent pour les attributs de classe mutables et non-mutables.
 
 ## Mutables
 
@@ -241,7 +241,11 @@ class Osef(object):
 rien
 ```
 
-Avantage: Un peu plus rapide que la méthode de classe. _On peut totalement négliger son utilisation_.
+Avantage: Un peu plus rapide que la méthode de classe. _On peut totalement négliger son utilisation_. 
+
+<span style="color:red">N'a pas accès aux attributs de classe, méthodes de classe ou méthodes statiques! </span> 
+
+> En gros, c'est comme une fonction déclarée au sein d'une classe.
 
 # Retour sur les propriétés
 
