--- a/_posts/2017-07-29-py-OOP1.markdown
+++ b/_posts/2017-07-29-py-OOP1.markdown
@@ -9,6 +9,15 @@ tags: divers, fr, en
 finished: false
 ---
 
+#### serie
+
+* [partie 1: Introduction ](/py/py-OOP1.html)
+* [partie 2: En pratique](/py/py-OOP2.html)
+* [partie 3: Attributs](/py/py-OOP3.html)
+* [partie 4: Héritage](/py/py-OOP4.html)
+* [partie 5: Héritage multiple et composition](/py/py-OOP5.html)
+* [partie 6: Méthodes magiques](/py/py-OOP6.html)
+
 #### Sources
 * [sam&max](http://sametmax.com/le-guide-ultime-et-definitif-sur-la-programmation-orientee-objet-en-python-a-lusage-des-debutants-qui-sont-rassures-par-les-textes-detailles-qui-prennent-le-temps-de-tout-expliquer-partie-1/)
 
