--- a/_posts/2017-07-29-py-OOP3.markdown
+++ b/_posts/2017-07-29-py-OOP3.markdown
@@ -12,7 +12,7 @@ finished: false
 
 * [partie 1: Introduction ](/py/py-OOP1.html)
 * [partie 2: En pratique](/py/py-OOP2.html)
-* [partie 3: Attributs](/py/py-OOP3.html)
+* [partie 3: Attributs](/py/py-OOP3.html)$$ \Lightarrow $$ 
 * [partie 4: Héritage](/py/py-OOP4.html)
 * [partie 5: Héritage multiple et composition](/py/py-OOP5.html)
 * [partie 6: Méthodes magiques](/py/py-OOP6.html)
