--- a/_posts/2017-07-29-py-OOP1.markdown
+++ b/_posts/2017-07-29-py-OOP1.markdown
@@ -11,7 +11,7 @@ finished: false
 
 #### serie
 
-* [partie 1: Introduction ](/py/py-OOP1.html) $$ \Lightarrow $$ 
+* [partie 1: Introduction ](/py/py-OOP1.html) $$ \Leftarrow $$ 
 * [partie 2: En pratique](/py/py-OOP2.html)
 * [partie 3: Attributs](/py/py-OOP3.html)
 * [partie 4: Héritage](/py/py-OOP4.html)
