--- a/_posts/2017-07-29-py-OOP6.markdown
+++ b/_posts/2017-07-29-py-OOP6.markdown
@@ -16,7 +16,7 @@ finished: false
 * [partie 3: Attributs](/py/py-OOP3.html)
 * [partie 4: Héritage](/py/py-OOP4.html)
 * [partie 5: Héritage multiple et composition](/py/py-OOP5.html)
-* [partie 6: Méthodes magiques](/py/py-OOP6.html) $$ \Lightarrow $$ 
+* [partie 6: Méthodes magiques](/py/py-OOP6.html) $$ \Leftarrow $$ 
 
 
 
