--- a/_posts/2017-07-25-py-divers.markdown
+++ b/_posts/2017-07-25-py-divers.markdown
@@ -9,6 +9,8 @@ tags: divers, fr, en
 finished: false
 ---
 
+* [how to make an immutable object in python](https://stackoverflow.com/questions/4828080/how-to-make-an-immutable-object-in-python)
+
 ## Divers
 
 * Toute valeur en Python est un objet
