--- a/_posts/2017-07-25-py-divers.markdown
+++ b/_posts/2017-07-25-py-divers.markdown
@@ -10,6 +10,15 @@ finished: false
 ---
 
 * [how to make an immutable object in python](https://stackoverflow.com/questions/4828080/how-to-make-an-immutable-object-in-python)
+* [Gestion de fichier (module os)](http://apprendre-python.com/page-gestion-fichiers-dossiers-python)
+
+## Liens
+
+* [apprendre-Python](http://apprendre-python.com/)
+* [sam&max](http://sametmax.com/cours-et-tutos/)
+* [zest de savoir](https://zestedesavoir.com/contenus/?tag=python)
+
+
 
 ## Divers
 
