--- a/_posts/2017-07-25-py-divers.markdown
+++ b/_posts/2017-07-25-py-divers.markdown
@@ -39,6 +39,15 @@ Python est entièrement construit autour de cette idée appelée _**duck-typing*
 <span style="color:red"> A étoffer! </span> <br>
 En bref, c'est une interface.
 
+## Operateur ternaire 
+
+```python
+<expression> if <condition> else <expression2>
+
+result = x if a > b else y
+
+```
+
 ## if \_\_name\_\_ == '_\_main\_\_'
 
 C'est une expression idiomatique qu'on utilise en Python pour éviter de lancer une partie de code si on importe ce script dans un autre.
