--- a/_posts/2017-07-25-py-divers.markdown
+++ b/_posts/2017-07-25-py-divers.markdown
@@ -17,6 +17,7 @@ finished: false
 * [apprendre-Python](http://apprendre-python.com/)
 * [sam&max](http://sametmax.com/cours-et-tutos/)
 * [zest de savoir](https://zestedesavoir.com/contenus/?tag=python)
+* [intermediate pythonista](http://intermediatepythonista.com/)
 
 
 
