--- a/_posts/2017-07-25-py-divers.markdown
+++ b/_posts/2017-07-25-py-divers.markdown
@@ -18,6 +18,7 @@ finished: false
 * [sam&max](http://sametmax.com/cours-et-tutos/)
 * [zest de savoir](https://zestedesavoir.com/contenus/?tag=python)
 * [intermediate pythonista](http://intermediatepythonista.com/)
+* [super tuto list comprehension](http://treyhunner.com/2015/12/python-list-comprehensions-now-in-color/)
 
 
 
