--- a/_posts/2017-07-25-py-divers.markdown
+++ b/_posts/2017-07-25-py-divers.markdown
@@ -19,6 +19,7 @@ finished: false
 * [zest de savoir](https://zestedesavoir.com/contenus/?tag=python)
 * [intermediate pythonista](http://intermediatepythonista.com/)
 * [super tuto list comprehension](http://treyhunner.com/2015/12/python-list-comprehensions-now-in-color/)
+* [multi dim array](https://snakify.org/lessons/two_dimensional_lists_arrays/)
 
 
 
