--- a/_posts/2017-07-25-py-divers.markdown
+++ b/_posts/2017-07-25-py-divers.markdown
@@ -23,6 +23,10 @@ finished: false
 
 
 
+*[print 2d array](https://stackoverflow.com/questions/45027681/pythonic-way-to-print-2d-list-python)
+
+
+
 ## Divers
 
 * Toute valeur en Python est un objet
