--- a/_posts/2017-07-25-py-divers.markdown
+++ b/_posts/2017-07-25-py-divers.markdown
@@ -25,6 +25,8 @@ finished: false
 
 *[print 2d array](https://stackoverflow.com/questions/45027681/pythonic-way-to-print-2d-list-python)
 
+*[Deep into Python and CS](https://www.cs.hmc.edu/csforall/index.html#)
+
 
 
 ## Divers
