--- a/_posts/2017-07-25-py-divers.markdown
+++ b/_posts/2017-07-25-py-divers.markdown
@@ -19,14 +19,19 @@ finished: false
 * [zest de savoir](https://zestedesavoir.com/contenus/?tag=python)
 * [intermediate pythonista](http://intermediatepythonista.com/)
 * [super tuto list comprehension](http://treyhunner.com/2015/12/python-list-comprehensions-now-in-color/)
+
+
+
 * [multi dim array](https://snakify.org/lessons/two_dimensional_lists_arrays/)
+* [print 2d array](https://stackoverflow.com/questions/45027681/pythonic-way-to-print-2d-list-python)
+* [Dictionnaires](http://xahlee.info/python/python_dictionary_methods.html)
 
 
 
-*[print 2d array](https://stackoverflow.com/questions/45027681/pythonic-way-to-print-2d-list-python)
 
-*[Deep into Python and CS](https://www.cs.hmc.edu/csforall/index.html#)
-*[gross collection d'exercices](http://snakify.org/)
+* [Deep into Python and CS](https://www.cs.hmc.edu/csforall/index.html#)
+* [gross collection d'exercices](http://snakify.org/)
+
 
 
 
@@ -184,4 +189,10 @@ result = x if a > b else y
 x = 2
 print("yep") if (x == 2) else print("nop")
 
+```
+
+## Lettre de l'alphabet dans une liste
+
+```python
+letters = [chr(i) for i in range(ord('a'), ord('j')+1)]
 ```
