--- a/_posts/2017-07-29-py-OOP4.markdown
+++ b/_posts/2017-07-29-py-OOP4.markdown
@@ -477,7 +477,7 @@ On peut appeler la méthode du parent dans l'enfant, en utilisant `super()`:
 ```python
 class Enfant2(Parent):
     def calcule_complique(self, liste, ristourne):
-        prix = super(Enfant2, self).calcule_complique(liste)
+        prix = super().calcule_complique(liste)
         return prix - (prix * ristourne / 100)
 ```
 
