--- a/_posts/2017-07-25-py-divers.markdown
+++ b/_posts/2017-07-25-py-divers.markdown
@@ -25,6 +25,10 @@ finished: false
 * [Deep into Python and CS](https://www.cs.hmc.edu/csforall/index.html#)
 * [gross collection d'exercices](http://snakify.org/)
 
+## Livres
+
+* [Python 101, livre complet en ligne](http://python101.pythonlibrary.org/)
+
 
 
 
