--- a/_posts/2017-07-25-py-divers.markdown
+++ b/_posts/2017-07-25-py-divers.markdown
@@ -27,7 +27,7 @@ finished: false
 
 ## Livres
 
-* [Python 101, livre complet en ligne](http://python101.pythonlibrary.org/)
+* [Python 101, livre complet en ligne](http://python101.pythonlibrary.org/g)
 
 
 
@@ -192,4 +192,64 @@ print("yep") if (x == 2) else print("nop")
 
 ```python
 letters = [chr(i) for i in range(ord('a'), ord('j')+1)]
+```
+
+## Being pythonic
+
+#### Regular way (C like):
+
+```python
+>>> alph = []
+>>> for i in range(ord('A'), ord('Z')+1):
+...     alph.append(chr(i))
+... 
+>>> print(alph)
+['A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'J', 'K', 'L', 'M', 'N', 'O', 'P', 
+'Q', 'R', 'S', 'T', 'U', 'V', 'W', 'X', 'Y', 'Z']
+>>>
+>>>
+>>> l = []
+>>> for i in range(10):
+...     for j in alph[:10]:
+...         l.append(j+str(i))
+...
+>>>
+>>>
+>>>for i, j in enumerate(l):
+...     if (i % 10 == 0) and (i > 0):
+...         print()
+...     print(j, end=' ')
+...
+A0 B0 C0 D0 E0 F0 G0 H0 I0 J0
+A1 B1 C1 D1 E1 F1 G1 H1 I1 J1
+A2 B2 C2 D2 E2 F2 G2 H2 I2 J2
+A3 B3 C3 D3 E3 F3 G3 H3 I3 J3
+A4 B4 C4 D4 E4 F4 G4 H4 I4 J4
+A5 B5 C5 D5 E5 F5 G5 H5 I5 J5
+A6 B6 C6 D6 E6 F6 G6 H6 I6 J6
+A7 B7 C7 D7 E7 F7 G7 H7 I7 J7
+A8 B8 C8 D8 E8 F8 G8 H8 I8 J8
+A9 B9 C9 D9 E9 F9 G9 H9 I9 J9
+```
+
+#### Pythonic way:
+
+```python
+a = [chr(i) for i in range(ord('A'), ord('J') + 1)]
+
+b = [i + str(j) for j in range(10) for i in a]
+
+print(''.join('\n'+b[i]+' ' if i%10==0 and i>0 else b[i]+' ' 
+                for i in range(len(b))))
+
+A0 B0 C0 D0 E0 F0 G0 H0 I0 J0
+A1 B1 C1 D1 E1 F1 G1 H1 I1 J1
+A2 B2 C2 D2 E2 F2 G2 H2 I2 J2
+A3 B3 C3 D3 E3 F3 G3 H3 I3 J3
+A4 B4 C4 D4 E4 F4 G4 H4 I4 J4
+A5 B5 C5 D5 E5 F5 G5 H5 I5 J5
+A6 B6 C6 D6 E6 F6 G6 H6 I6 J6
+A7 B7 C7 D7 E7 F7 G7 H7 I7 J7
+A8 B8 C8 D8 E8 F8 G8 H8 I8 J8
+A9 B9 C9 D9 E9 F9 G9 H9 I9 J9
 ```
