--- a/_posts/2017-07-25-py-divers.markdown
+++ b/_posts/2017-07-25-py-divers.markdown
@@ -253,3 +253,8 @@ A7 B7 C7 D7 E7 F7 G7 H7 I7 J7
 A8 B8 C8 D8 E8 F8 G8 H8 I8 J8
 A9 B9 C9 D9 E9 F9 G9 H9 I9 J9
 ```
+
+## Read char from the input
+
+* [getch, readchar](https://stackoverflow.com/questions/510357/python-read-a-single-character-from-the-user)
+
