--- a/_posts/2017-07-25-py-divers.markdown
+++ b/_posts/2017-07-25-py-divers.markdown
@@ -258,3 +258,48 @@ A9 B9 C9 D9 E9 F9 G9 H9 I9 J9
 
 * [getch, readchar](https://stackoverflow.com/questions/510357/python-read-a-single-character-from-the-user)
 
+```python
+class _Getch:
+    ''' Gets a single char grom stdin. 
+    Does not echo to the screen '''
+    
+    def __init__(self):
+        try:
+            self.impl = _GetchWindows()
+        except ImportError:
+            self.impl = _GetchUnix()
+        
+    def __call__(self): return self.impl()
+
+
+class _GetchUnix:
+    def __init__(self):
+        import tty, sys
+    
+    def __call__(self):
+        import sys, tty, termios
+        fd = sys.stdin.fileno()
+        old_settings = termios.tcgetattr(fd)
+
+        try:
+            tty.setraw(sys.stdin.fileno())
+            ch = sys.stdin.read(1)
+        finally:
+            termios.tcsetattr(fd, termios.TCSADRAIN, old_settings)
+
+        return ch
+
+
+class _GetchWindows:
+    def __init__(self):
+        import msvcrt
+    
+    def __call__(self):
+        import msvcrt
+        return msvcrt.getch()
+
+# getch = _Getch()
+# key   = getch.__call__()
+
+# print("Pressed key is: ", key)
+```
